pkg/lang/testdata/ub/constraints/invalid/splat-rules.ub
constraints: [
  { kind: at-most-one-of,    fields: [input.replicas[*].primary] },
  { kind: required-together, fields: [input.replicas[*].x, input.volumes[*].y] },
]
